// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`paralysis initiator should be paralysed 1`] = `
"*Игрок 1* использовал _Паралич_ на *Игрок 2*
\\[ 📖80 ]
*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Паралич_ *Игрок 1*"
`;

exports[`paralysis should handle several casters 1`] = `
"*Игрок 1* использовал _Паралич_ на *Игрок 2*
\\[ 📖80 ]
*Игрок 3* использовал _Паралич_ на *Игрок 2*
\\[ 📖80 ]
*Игрок 2* пытался атаковать *Игрок 1*, но у него не получилось
_Паралич_ *Игрок 1*
_Паралич_ *Игрок 3*"
`;
